<resources>
    <string name="app_name">Weather App</string>

    <string-array name="conditions">
        <item>Cloudy</item>
        <item>Partly Cloudy</item>
        <item>Sunny</item>
        <item>Rainy</item>
        <item>Windy</item>
        <item>Snowy</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>

    <string name="city_not_found">City not found</string>
    <string name="error">Error</string>

    <!--images description-->
    <string name="desc_weather_icon">current weather icon</string>
    <string name="desc_humidity_icon">humidity icon</string>
    <string name="desc_pressure_icon">pressure icon</string>
    <string name="desc_wind_icon">wind icon</string>

    <string name="pressure_suffix">mm</string>
    <string name="moscow">Moscow</string>
    <string name="humidity_suffix">%</string>
    <string name="date_val">Saturday, July 6</string>
    <string name="temperature_suffix">°</string>
    <string name="wind_suffix">km/h</string>
    <string name="day_val">Sunday</string>

    <string name="fill_city_name">Please fill city field</string>

    <string name="done">Done</string>
    <string name="city">City</string>
    <string name="popular_cities">Popular Cities</string>
    <string name="more_info">Show Forecast</string>
    <string name="come_soon_for">Come soon for</string>
    <string name="delete_button">delete button</string>
    <string name="button_add">button add</string>
    <string name="cities">Cities</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="developer_email">stanislav.antunovich@gmail.com</string>
    <string name="share_app">Check this app https://github.com/StanislavAntunovich/Weather-app</string>
    <string name="send_subject">Question</string>
    <string name="cv_url">https://spb.hh.ru/resume/293a3520ff0735e2c40039ed1f4e46727a7036</string>
    <string name="txt_temp_unit">Единица измерения</string>
    <string name="desc_weather_mipmap">weather mipmap</string>
    <string name="txt_nav_home">Home</string>
    <string name="txt_nav_forecast">Forecast</string>
    <string name="txt_nav_share">Share</string>
    <string name="txt_nav_send">Send Question</string>
    <string name="txt_nav_about">About</string>
    <string name="txt_communicate">Communicate</string>
    <string name="txt_about_developer">About Developer</string>
    <string name="txt_unable_share">Unable to share</string>
    <string name="txt_unable_about">Unable to show about</string>
    <string name="txt_unable_send">Unable to send question</string>
    <string name="current_humidity">Current humidity: </string>
    <string name="current_temperature">Current Temperature:</string>

    <string-array name="cities">
        <item>Moscow</item>
        <item>Saint-Petersburg</item>
        <item>Ryazan</item>
        <item>Novosibirsk</item>
        <item>Vyborg</item>
        <item>Novgorod</item>
        <item>Murmansk</item>
    </string-array>

    <string-array name="temp_units">
        <item>C°</item>
        <item>F°</item>
        <item>K°</item>
    </string-array>

</resources>
