<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    android:padding="16dp"
    android:background="@drawable/bg_sky1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_temp_unit"
            android:textColor="@color/text_dark_blue"
            android:textSize="@dimen/text_city_details"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_temp_unit"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:entries="@array/temp_units"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/humidity"
        android:textColor="@color/text_dark_blue"
        android:textSize="@dimen/text_city_details" />

    <CheckBox
        android:id="@+id/cb_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/pressure"
        android:textColor="@color/text_dark_blue"
        android:textSize="@dimen/text_city_details" />

    <CheckBox
        android:id="@+id/cb_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/wind"
        android:textColor="@color/text_dark_blue"
        android:textSize="@dimen/text_city_details" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"/>


</LinearLayout>