<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_sky1"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_start"
    android:paddingEnd="@dimen/margin_end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_city"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:icon = "@drawable/ic_add_circle"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconGravity="textStart"
            android:src="@drawable/ic_add_circle"
            android:contentDescription="@string/button_add" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cities_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="8dp"
        android:layout_weight="10"
        android:paddingStart="@dimen/padding_8"
        android:paddingEnd="@dimen/padding_8">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttn_show_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/color_blue"
        android:text="@string/done"
        android:textColor="@android:color/white" />

</LinearLayout>