<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_sky1"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_start"
    android:paddingEnd="@dimen/margin_end"
    tools:context=".AddCityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="10"
            android:hint="@string/city"
            android:paddingStart="@dimen/padding_8"
            android:paddingEnd="@dimen/padding_8"
            android:textColor="@color/text_dark_blue"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/text_city_details" />

        <ImageView
            android:id="@+id/btn_add_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="8dp"
            android:src="@drawable/ic_add_circle"
            android:contentDescription="@string/button_add" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cities_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="8dp"
        android:layout_weight="10"
        android:paddingStart="@dimen/padding_8"
        android:paddingEnd="@dimen/padding_8">

    </androidx.recyclerview.widget.RecyclerView>

    <!--<android.support.constraint.ConstraintLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center">-->

    <!--<CheckBox-->
    <!--android:id="@+id/cb_humidity"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:buttonTint="@color/color_blue"-->
    <!--android:checked="true"-->
    <!--android:text="@string/humidity"-->
    <!--android:textColor="@color/text_dark_blue"-->
    <!--android:textSize="@dimen/text_city_details"-->
    <!--app:layout_constraintBaseline_toBaselineOf="@+id/cb_pressure"-->
    <!--app:layout_constraintEnd_toStartOf="@+id/cb_pressure"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toStartOf="parent" />-->

    <!--<CheckBox-->
    <!--android:id="@+id/cb_pressure"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:buttonTint="@color/color_blue"-->
    <!--android:checked="true"-->
    <!--android:text="@string/pressure"-->
    <!--android:textColor="@color/text_dark_blue"-->
    <!--android:textSize="@dimen/text_city_details"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toStartOf="@+id/cb_wind"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toEndOf="@+id/cb_humidity"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--<CheckBox-->
    <!--android:id="@+id/cb_wind"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:buttonTint="@color/color_blue"-->
    <!--android:checked="true"-->
    <!--android:text="@string/wind"-->
    <!--android:textColor="@color/text_dark_blue"-->
    <!--android:textSize="@dimen/text_city_details"-->
    <!--app:layout_constraintBaseline_toBaselineOf="@+id/cb_pressure"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toEndOf="@+id/cb_pressure" />-->
    <!--</android.support.constraint.ConstraintLayout>-->

    <Button
        android:id="@+id/bttn_show_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/color_blue"
        android:text="@string/done"
        android:textColor="@android:color/white" />

</LinearLayout>